--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
       href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Noto+Sans:wght@400;700&family=Reem+Kufi&family=Roboto+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <meta name="twitter:image" content="http://sushiswap.org/hero.png" />
+    <meta name="twitter:image" content="/hero.png" />
     <meta
       name="twitter:description"
-      content="Farm SUSHI with Uniswap LP Token"
+      content="Farm SAFEUNI with SafeUniverse LP Token"
     />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="🍣 SushiSwap - An Evolution over Uniswap with Yield Farming"
+      content="🍣 SafeUniverse - An Evolution over SafeUniverse with Yield Farming"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
