--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="🍣 SafeUniverse - An Evolution over SafeUniverse with Yield Farming"
+      content=" ☀SafeUniverse - An Evolution over SafeUniverse with Yield Farming"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
